--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de login</title>
-    <link rel="stylesheet" href="estilos/style.css"> 
+    <link rel="stylesheet" href="estilos/style.css">
+     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-                foto
             </div>
             <div id="formulario">
                 <h1>login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer suas configurações no seu ambiente</p>
                 <form action="login.php" method="post">
-                    
+                    <p>
+                        <label for="imail"><span class="material-symbols-outlined">account_circle</span></label>
+                        <input type="email" name="email" id="imail" required minlength="8" placeholder="Digite seu e-mail">
+                    </p>
                 </form>
             </div>
         </section>
