--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de login</title>
     <link rel="stylesheet" href="estilos/style.css">
-     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-     <link rel="stylesheet" href="estilos/media-query.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
+
 <body>
     <main>
         <section id="login">
@@ -15,15 +17,32 @@
             </div>
             <div id="formulario">
                 <h1>login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer suas configurações no seu ambiente</p>
-                <form action="login.php" method="post">
-                    <p>
-                        <label for="imail"><span class="material-symbols-outlined">account_circle</span></label>
-                        <input type="email" name="email" id="imail" required minlength="8" placeholder="Digite seu e-mail">
-                    </p>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer suas configurações no
+                    seu ambiente</p>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            account_circle
+                        </span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            key
+                        </span>
+                        <input type="password" name="senha" id="isenha" required minlength="8"
+                            autocomplete="current-password">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a class="botao" href="esqueci.html">Esqueci a senha <span class="material-symbols-outlined">
+                            mail
+                        </span></a>
                 </form>
             </div>
         </section>
     </main>
 </body>
+
 </html>
